Fix font on mobile

--- a/assets/styles/craft.css
+++ b/assets/styles/craft.css
@@ -267,7 +267,7 @@ em{
 }
 
 .mobileHead{
-  font-family: 'Avenir', san-serif;
+  font-family: 'Baskerville', serif;
   font-weight: lighter;
   letter-spacing: 3px;
   font-size: 14pt;
